syntax = "proto3";

option csharp_namespace = "Enterprise";

package greet;

service Greeter {
  rpc ChangePrice(StockItemIdRequest) returns (StockItemReply);
}

message StockItemRequest {
  int64 itemId = 1;
  double salesPrice = 2;
  int32 amount = 3;
  int32 minStock = 4;
  int32 maxStock = 5;
}

message StockItemIdRequest {
	int64 itemId = 1;
	double newPrice = 2;
}

message StockItemReply {
  bool success = 1;
}